# zephyr_app

./: CMakeLists.txt  Kconfig  build.sh  menuconfig.sh
boards/: nucleo_g431rb.conf  nucleo_g431rb.overlay  nucleo_g474re.conf  nucleo_g474re.overlay
src/: keyboard.c  main.c  sensor.c  zbus.c
